# Spread_Interpolate

./: CMakeLists.txt  Makefile  README.md  init.cpp  init.h  io.cpp  particle_list.cpp  particle_list_flat.cpp  plot3D_spread.m  spread_interp.cpp  spread_interp_bench.cpp
benchmark/: spread_interp_bench.cpp  spread_interp_bench_weak.cpp
include/: init.h  io.h  spread_interp.h  utils.h
src/: chebyshev.cpp  init.cpp  io.cpp  spread_interp.cpp
testing/: CMakeLists.txt  fft_c2c.cpp  fft_c2c_3D.cpp  spreadInterpNoPBC.cpp  spreadInterpPBC.cpp  testSpreadInterp.cpp  test_cheb.cpp  test_spread.cpp
testing/test_data/nopbc/: .CMakeLists.txt.swp  forces.txt  interp.txt  particles.txt  spread.txt
testing/test_data/pbc/: forces.txt  interp.txt  particles.txt  spread.txt
viz/: plot3D_spread.m
